src/clippy_output/clippy_version.txt
error[E0433]: failed to resolve: use of undeclared crate or module `libc`
 --> src//version.rs:3:32
  |
3 | pub static mut Version: *const libc::c_char = b"9.1.193-1600\0" as *const u8
  |                                ^^^^ use of undeclared crate or module `libc`

error[E0433]: failed to resolve: use of undeclared crate or module `libc`
 --> src//version.rs:4:15
  |
4 |     as *const libc::c_char;
  |               ^^^^ use of undeclared crate or module `libc`

error[E0601]: `main` function not found in crate `version`
 --> src//version.rs:4:28
  |
4 |     as *const libc::c_char;
  |                            ^ consider adding a `main` function to `src//version.rs`

error: aborting due to 3 previous errors

Some errors have detailed explanations: E0433, E0601.
For more information about an error, try `rustc --explain E0433`.
